tests/ui/suggestions/suggest-closure-return-type-3.stderr
error[E0282]: type annotations needed
  --> $DIR/suggest-closure-return-type-3.rs:4:21
   |
LL |     unbound_drop(|| []);
   |                     ^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
